投稿一覧画面レイアウト更新

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
                   <%= link_to 'my page', user_path(current_user.id), class: "header-link" %>
                 </li>
                 <li>
-                  <%= link_to '投稿フォーム', new_exhibition_path, class: "header-link" %>
+                  <%= link_to '作品を投稿', new_exhibition_path, class: "header-link" %>
                 </li>
                 <li>
                 <li>
