--- a/app/views/public/exhibitions/new.html.erb
+++ b/app/views/public/exhibitions/new.html.erb
@@ -1,17 +1,15 @@
 <div class=" d-flex align-items-center justify-content-center pt-5">
   <div class="container">
     <div class="row">
-      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+      <div class="col-11 col-md-8 col-lg-6 mx-auto pt-5">
         <div class="card shadow">
-          <div class="card-body text-center">
-            <h1>展示する</h1>
-
+          <div class="card-body text-center pt-5">
               <%= form_with model: @exhibition do |f| %>
-                <h4>展示写真</h4><%= f.file_field :image, accept: "image/*" %>
-                <h4>タイトル</h4><%= f.text_field :title %>
-                <h4>紹介文</h4><%= f.text_field :introduction %>
-                <h4>カテゴリー</h4><%= f.collection_select :category_id, @categories, :id, :name, {prompt: "--選択してください--"}, {class: "form-control input-sm"} %>
-                <%= f.submit '展示する' %>
+                <%= f.file_field :image, accept: "image/*"%><br><br>
+                <%= f.text_field :title, placeholder: "タイトル", class: "form-control" %>
+                <%= f.text_area :introduction, placeholder: "キャプション", class: "form-control" %><br>
+                <%= f.collection_select :category_id, @categories, :id, :name, {prompt: "カテゴリー選択"}, {class: "form-control input-sm"} %><br>
+                <%= f.submit '展示する', class: "btn btn-sm btn-success"%>
               <% end %>
           </div>
         </div>
