ヘッダーに検索フォーム移動、ユーザー別の投稿一覧画面実装

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -10,7 +10,7 @@
             <% end %>
            <% end %>
         </ul>
-        <%= link_to '展示一覧', exhibitions_path, class: "link" %>
+        <%= link_to '展示一覧', exhibitions_user_path(@user), class: "link" %>
       </div>
 
         <div class="col-4">
