--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%= search_form_for @search, url: search_exhibitions_path do |f| %>
+                  <%= search_form_for @q, url: search_exhibitions_path do |f| %>
                     <%= f.search_field :title_cont,placeholder: '検索するテキストを入力...' %>
                     <%= f.submit '検索' %>
                   <% end %>
