--- a/app/views/public/exhibitions/comments.html.erb
+++ b/app/views/public/exhibitions/comments.html.erb
@@ -1,5 +1,6 @@
 <div class=" d-flex align-items-center justify-content-center pt-5">
   <div class="container">
+    <div class="text-center">
       <div class="row pt-5">
         <div class="col-lg-7">
           <p><%= image_tag @exhibition.get_image(600,600) %></p><br>
