各ページの写真リサイズ

--- a/app/views/public/exhibitions/index.html.erb
+++ b/app/views/public/exhibitions/index.html.erb
@@ -11,7 +11,7 @@
       <% @exhibition.each do |exhibition| %>
         <div class="mt-1 pb-10">
           <%= link_to exhibition_path(exhibition.id) do %>
-            <%= image_tag exhibition.image, size: "200x200" %>
+            <%= image_tag exhibition.get_image(600,600), size: "200x200" %>
           <% end %>
         </div>
       <% end %>
