いいね部分テンプレート化

--- a/app/views/public/exhibitions/show.html.erb
+++ b/app/views/public/exhibitions/show.html.erb
@@ -16,20 +16,7 @@
       </div>
       <div class="col-lg-1">
         <div class="text-center">
-          <!--いいね機能実装-->
-          <% if @exhibition.favorited_by?(current_user) %>
-            <p>
-              <%= link_to exhibition_favorites_path(@exhibition), method: :delete, class: "link" do %>
-               <i class="fa-solid fa-heart-circle-minus fa-3x" style="color: pink;"></i><%= @exhibition.favorites.count %>
-              <% end %>
-            </p>
-              <% else %>
-            <p>
-              <%= link_to exhibition_favorites_path(@exhibition), method: :post, class: "link" do %>
-                <i class="fa-solid fa-heart-circle-plus fa-3x" style="color: silver;"></i><%= @exhibition.favorites.count %>
-              <% end %>
-            </p>
-          <% end %>
+          <%= render 'favorites', exhibition: @exhibition %>
         </div>
       </div>
       <div class="col-lg-1">
