--- a/app/views/public/exhibitions/show.html.erb
+++ b/app/views/public/exhibitions/show.html.erb
@@ -16,7 +16,8 @@
       </div>
       <div class="col-lg-1">
         <div class="text-center">
-          <%= render 'favorites', exhibition: @exhibition %>
+          <!--いいねの部分テンプレート-->
+          <%= render "public/favorites/favorites", exhibition: @exhibition %>
         </div>
       </div>
       <div class="col-lg-1">
