formのボタン変更

--- a/app/views/public/comments/_comments.html.erb
+++ b/app/views/public/comments/_comments.html.erb
@@ -2,5 +2,5 @@
 <%#= form_with (model: comment, url: exhibition_comments_path(exhibition.id), method: :post, local: false do |f| %>
 <%= form_with(model: [exhibition, comment], local: false) do |f| %>
   <%= f.text_area :message, rows: '5', placeholder: "コメントを記入", class: "form-control" %><br>
-  <%= f.submit "送信", class: "btn btn-sm btn-success" %>
+      <input class="btn-form-gray" type="submit" value="送信"></p>
 <% end %>
