--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -29,7 +29,7 @@
             </div><br>
 
             <div class="actions">
-              <%= f.submit "Sign up", class: "pushcircle" %>
+              <%= f.submit "Sign up", class: "btn-form-gray" %>
             </div><br>
             <% end %>
 
@@ -37,7 +37,7 @@
                <%= link_to "こちら", new_user_session_path %>からログイン</p>
 
             <%#= render "public/shared/links" %>
-            
+
             <!--背景のスライド-->
             <ul class="background">
                 <li></li>
