--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,61 +14,6 @@
  *= require_self
  */
 
-
-/*== 押し込む円 */
-.pushcircle{
-    /*周囲の線の起点とするためrelativeを指定*/
-	position: relative;
-    /*円の形状*/
-	width:200px;
-	height:50px;
-	border-radius: 10px;
-    box-sizing: border-box;
-    padding: 0 10px;
-	text-align: center;
-	background:#6495ED;
-	color: #fff;
-    text-decoration: none;
-    outline: none;
-    /*天地中央にテキストを配置*/
-    align-items: center;
-    justify-content: center;
-}
-/*内側の線*/
-.pushcircle:after {
-	content: "";
-    /*絶対配置で線の位置を決める*/
-	position: absolute;
-	top: 50%;
-	left: 50%;
-    /*線の形状*/
-    width: 85%;
-	height: 85%;
-	border-radius: 50%;
-	transform: translate(-50%, -50%) scale(1.1);
-    /*アニメーションの指定*/
-    transition: .3s ease;
-	}
-/*hoverをしたら枠線が小さくなる*/
-.pushcircle:hover:after {
-	transform: translate(-50%, -50%) scale(1);
-    border-color:#fff;
-}
-
-/*slick*/
-.slider .slick-slide {
-    margin:0 10px;
-}
-
-.slick-prev,
-.slick-next {
-    position: absolute;/*絶対配置にする*/
-    top: 42%;
-    outline: none;/*クリックをしたら出てくる枠線を消す*/
-    height: 15px;
-    width: 15px;
-}
-
 // リンクの色変更
 .link {
     text-decoration: none;
@@ -78,4 +23,28 @@
 .header-link {
     text-decoration: none;
     color: #fff ;
+}
+
+// form用ボタン色(グレーにするところ)
+.btn-form-gray {
+    height: 40px;
+    width: 200px;
+    border: none;  /* 枠線を消す */
+    outline: none; /* クリックしたときに表示される枠線を消す */
+    border-radius: 20px;
+    background: #EEEEEE; //ボタンの背景色
+    color: #000000; //ボタンのテキストの色
+
+}
+
+// form用ボタン色(ブルーにするところ)
+.btn-form-blue {
+    height: 40px;
+    width: 200px;
+    border: none;  /* 枠線を消す */
+    outline: none; /* クリックしたときに表示される枠線を消す */
+    border-radius: 20px;
+    background: #5D99FF; //ボタンの背景色
+    color: #FFFFFF; //ボタンのテキストの色
+
 }
