--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -6,10 +6,23 @@
           <div class="card-body text-center">
             <h4><strong>Exhibition</strong></h4>
           </div>
+        </div><br><br>
+        <div class="text-center">
+          <div class="zoomIn"><a href="#"><span class="mask">
+            <% @categories.each do |category| %>
+            <li><%= link_to category.name, category_path(category.id), class: "link-black" %></li><br>
+                <% if category.id == 5  %>
+                  <%= link_to image_tag("huukei.jpg", size: "500x200"), category_path(category.id) %><br><br><br>
+                <% end %>
+                <% if category.id == 6  %>
+                  <%= link_to image_tag("doubutu.jpg", size: "500x200"), category_path(category.id) %><br><br><br>
+                <% end %>
+                <% if category.id == 7  %>
+                  <%= link_to image_tag("jinnbutu.jpg", size: "500x200"), category_path(category.id) %><br><br><br>
+                <% end %>
+             <% end %>
+          </span></a></div>
         </div>
-        <% @categories.each do |category| %>
-          <%= link_to category.name, category_path(category.id) %>
-        <% end %>
       </div>
     </div>
   </div>
