--- a/app/views/public/comments/create.js.erb
+++ b/app/views/public/comments/create.js.erb
@@ -1,1 +1,2 @@
 $("#comments-area").html("<%= j(render 'public/comments/comments', exhibition: @exhibition,comment: @comment) %>")
+$("#comments-list-area").html("<%= j(render 'public/comments/comments_list', exhibition: @exhibition) %>")
