--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,12 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%= search_form_for @q, url: search_exhibitions_path do |f| %>
-                    <%= f.search_field :title_cont,placeholder: '検索するテキストを入力...' %>
-                    <%= f.submit '検索' %>
-                  <% end %>
+
+                    <%#= search_form_for @q, url: search_exhibitions_path do |f| %>
+                      <%#= f.search_field :title_cont,placeholder: '検索するテキストを入力...' %>
+                      <%#= f.submit '検索' %>
+                    <%# end %>
+
                 </li>
                 <li>
                   <%= link_to "about", about_path, class: "header-link" %>
@@ -62,6 +64,12 @@
                   <%= link_to "log out", destroy_admin_session_path, method: :delete, class: "header-link" %>
                 </li>
               <% else %>
+                <li>
+                  <%= search_form_for @q, url: search_exhibitions_path do |f| %>
+                    <%= f.search_field :title_cont,placeholder: '検索するテキストを入力...' %>
+                    <%= f.submit '検索' %>
+                  <% end %>
+                </li>
                 <li>
                   <%= link_to "about", about_path, class: "header-link" %>
                 </li>
