--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,16 +3,18 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="text-center">
-          <h1>Well Come!!</h1>
-          <div class="zoomIn"><a href="#"><span class="mask">
-          <% @exhibition.first(9).each do |exhibition|%>
-            <%= link_to exhibition_path(exhibition.id) do %>
-              <%= image_tag exhibition.get_image(400,300) %>
-            <% end %>
-          <% end %>
-          </span></a></div>
+          <h1>Well Come!!</h1><br>
         </div>
       </div>
     </div>
+      <div class="zoomIn"><a href="#"><span class="mask">
+        <ul class="gallery">
+          <% @exhibition.each do |exhibition|%>
+            <%= link_to exhibition_path(exhibition.id) do %>
+              <li><%= image_tag exhibition.get_image(600,600) %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      </span></a></div>
   </div>
 </div>
