ゲストログイン記述場所変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,11 +47,11 @@
 .btn-form-blue {
     height: 40px;
     width: 200px;
-    border: none;  /* 枠線を消す */
-    outline: none; /* クリックしたときに表示される枠線を消す */
+    border: none;
+    outline: none;
     border-radius: 20px;
-    background: #5D99FF; //ボタンの背景色
-    color: #FFFFFF; //ボタンのテキストの色
+    background: #5D99FF;
+    color: #FFFFFF;
 
 }
 
@@ -66,6 +66,7 @@
     color: #000000;
 
 }
+
 
 
 // // フォント変更
