--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,10 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-
-                    <%#= search_form_for @q, url: search_exhibitions_path do |f| %>
-                      <%#= f.search_field :title_cont,placeholder: '検索するテキストを入力...' %>
-                      <%#= f.submit '検索' %>
-                    <%# end %>
-
+                  <%= search_form_for @q, url: search_exhibitions_path do |f| %>
+                    <%= f.search_field :title_cont,placeholder: '検索するテキストを入力...' %>
+                    <%= f.submit '検索' %>
+                  <% end %>
                 </li>
                 <li>
                   <%= link_to "about", about_path, class: "header-link" %>
@@ -72,9 +70,6 @@
                 </li>
                 <li>
                   <%= link_to "about", about_path, class: "header-link" %>
-                </li>
-                <li>
-                  <%= link_to "guest", users_guest_sign_in_path, method: :post, class: "header-link" %>
                 </li>
                 <li>
                   <%= link_to "sign up", new_user_registration_path, class: "header-link" %>
