--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
               <li class="center-list">
                 <%= link_to "user", admin_users_path, class: "header-link" %>
               </li>
-              <li>
+              <li class="center-list">
                 <%= link_to "category", admin_categories_path, class: "header-link" %>
               </li>
           </ul>
