グローバルナビゲーションの実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,11 +39,14 @@
 
 // ナビバー内のレイアウト
 .navbar-brand{
-    color: #4169E1
+    border-left: 1px solid black;
+    color: black;
+    padding: 10px;
 }
 .center-ul {
     display: flex;
-    list-style-type: none;
+    justify-content: center;
+    text-align: center;
     margin: 0;
     padding: 0;
 }
@@ -61,7 +64,11 @@
 .right-ul{
     text-align: right;
 }
-
+.right-list{
+    text-align: right;
+    border-right: 1px solid black;
+    padding: 10px;
+}
 
 .search-text{
 	width: 200px;/*テキスト入力エリアが伸びる前の横幅*/
@@ -117,6 +124,94 @@
 
 }
 
+
+#g-nav{
+    position:fixed;
+    z-index: 999;
+	top:0;
+    right: -120%;
+	width:100%;
+    height: 100vh;/*ナビの高さ*/
+	background:#999;
+	transition: all 0.6s;
+}
+#g-nav.panelactive{
+    right: 0;
+}
+
+#g-nav ul {
+    position: absolute;
+    z-index: 999;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+#g-nav li{
+	list-style: none;
+    text-align: center;
+}
+#g-nav li a{
+	color: #333;
+	text-decoration: none;
+	padding:10px;
+	display: block;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	font-weight: bold;
+}
+
+.openbtn{
+	position:fixed;
+    z-index: 9999;/*ボタンを最前面に*/
+	top:10px;
+	right: 10px;
+	cursor: pointer;
+    width: 50px;
+    height:50px;
+}
+
+/*×に変化*/
+.openbtn span{
+    display: inline-block;
+    transition: all .4s;
+    position: absolute;
+    left: 14px;
+    height: 3px;
+    border-radius: 2px;
+	background-color: #666;
+  	width: 45%;
+  }
+
+.openbtn span:nth-of-type(1) {
+	top:15px;
+}
+
+.openbtn span:nth-of-type(2) {
+	top:23px;
+}
+
+.openbtn span:nth-of-type(3) {
+	top:31px;
+}
+
+.openbtn.active span:nth-of-type(1) {
+    top: 18px;
+    left: 18px;
+    transform: translateY(6px) rotate(-45deg);
+    width: 30%;
+}
+
+.openbtn.active span:nth-of-type(2) {
+	opacity: 0;
+}
+
+.openbtn.active span:nth-of-type(3){
+    top: 30px;
+    left: 18px;
+    transform: translateY(-6px) rotate(45deg);
+    width: 30%;
+}
 
 // // フォント変更
 
