--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
     <header class="sticky-top"> <!--sticky-topでheader固定-->
       <nav class="navbar">
-        <a class="navbar-brand" href="/">PhotoExhibition</a>
+        <a class="navbar-brand" href="/"><i class="fa-solid fa-camera-retro"></i>PhotoExhibition</a>
             <% if user_signed_in? %>
           <ul class="center-ul">
               <li class="center-list">
@@ -33,27 +33,30 @@
                 <p class="list-text"><%= link_to '-展示者-', users_path, class: "header-link" %></p>
               </li>
           </ul>
-          <ul class="right-ul">
-            <!--<li>-->
-            <!--  <table>-->
-            <!--    <div class="search_container">-->
-            <!--      <%#= search_form_for @q, url: search_exhibitions_path do |f| %>-->
-            <!--    <tr>-->
-            <!--      <th></th>-->
-            <!--      <th></th>-->
-            <!--    </tr>-->
-            <!--    <tr>-->
-            <!--      <td>-->
-            <!--        <div class="search-text">-->
-            <!--         <%#= f.search_field :title_cont,placeholder: '検索するテキストを入力...', class: "form-control"%>-->
-            <!--        </div>-->
-            <!--      </td>-->
-            <!--      <td><input class="search-btn" type="submit" value="検索"></td>-->
-            <!--    </tr>-->
-            <!--    <%# end %>-->
-            <!--  </table>-->
-            <!--    </div>-->
-            <!--  </li>-->
+          <!--グローバルナビゲーション-->
+          <div class="openbtn"><span></span><span></span><span></span></div>
+          <nav id="g-nav">
+          <ul>
+            <li>
+              <table>
+                <div class="search_container">
+                  <%= search_form_for @q, url: search_exhibitions_path do |f| %>
+                <tr>
+                  <th></th>
+                  <th></th>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="search-text">
+                     <%= f.search_field :title_cont,placeholder: 'テキストを入力', class: "form-control"%>
+                    </div>
+                  </td>
+                  <td><input class="search-btn" type="submit" value="検索"></td>
+                </tr>
+                <% end %>
+              </table>
+                </div>
+              </li>
             <li>
                 <%= link_to 'my page', user_path(current_user.id), class: "header-link" %>
               </li>
@@ -61,10 +64,11 @@
                 <%= link_to '作品を投稿', new_exhibition_path, class: "header-link" %>
               </li>
               <li>
-              <li>
                 <%= link_to "log out", destroy_user_session_path, method: :delete, class: "header-link" %>
               </li>
           </ul>
+          </div>
+          </nav>
             <% elsif admin_signed_in? %>
           <ul class="center-ul">
               <li class="center-list">
